client failure code

--- a/preprocessing/preprocess_air_passenger.ipynb
+++ b/preprocessing/preprocess_air_passenger.ipynb
@@ -31,8 +31,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "raw_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# remove columns that do not add anything to the learning process of model\n",
     "raw_df.drop(['Unnamed: 0', 'id'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_df.info()"
    ]
   },
   {
@@ -156,6 +183,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# standard scale numerical features\n",
+    "# scaler = StandardScaler()\n",
+    "# raw_df[numerical_features] = scaler.fit_transform(raw_df[numerical_features])\n",
+    "\n",
+    "# raw_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# standard scale numerical columns\n",
@@ -196,6 +236,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "merged_df = pd.concat([X_test, y_test], axis=1)\n",
     "merged_df"
    ]
@@ -208,6 +257,15 @@
    "source": [
     "for i in merged_df.columns:\n",
     "    print(f\"- \\\"{i}\\\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.info()"
    ]
   },
   {
