--- a/preprocessing/preprocess_rice_msc_dataset.ipynb
+++ b/preprocessing/preprocess_rice_msc_dataset.ipynb
@@ -40,6 +40,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "raw_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# label encode rice class labels\n",
     "lel = LabelEncoder()\n",
     "raw_df['CLASS'] = lel.fit_transform(raw_df['CLASS'])\n",
